Fixed email tags when packaged and payment direct back to confirmation

--- a/force-app/main/default/classes/SummitEventsConfirmationController.cls
+++ b/force-app/main/default/classes/SummitEventsConfirmationController.cls
@@ -39,8 +39,9 @@ public with sharing class SummitEventsConfirmationController {
             eventPage = [
                     SELECT Event_Confirmation_Title__c, Event_Name__c, Template__c, Event_Confirmation_Description__c, Event_Footer__c,
                             Event_Home_Link_Title__c, Event_Home_Link_URL__c, Tracking_Confirmation_Registration__c, Event_Full_Text__c,
-                            Close_Event_Days_Before__c, Keep_Registration_Open_During_Event__c,
-                            Hand_Raise_Action__c, Account__r.Name, Audience__c, Filter_Category__c, Event_Sponsor__c
+                            Close_Event_Days_Before__c, Keep_Registration_Open_During_Event__c, Hand_Raise_Action__c, Account__r.Name, Audience__c,
+                            Filter_Category__c, Event_Sponsor__c, Event_Fee_Label__c, Event_Fee_Submit_List_Label__c, Event_Fee_Total_Label__c,
+                            Event_Fee__c, Event_Fee_Allocation__c, Event_Fee_Additional__c
                     FROM Summit_Events__c
                     WHERE Id = :eventInformation.eventId
                     WITH SECURITY_ENFORCED
@@ -73,7 +74,7 @@ public with sharing class SummitEventsConfirmationController {
 
                 }
 
-                gatherPaymentInformation();
+                //gatherPaymentInformation();
 
             }
         }
@@ -299,8 +300,7 @@ public with sharing class SummitEventsConfirmationController {
         } else if (payments == 0) {
             errorMessage = 'Payment was not received. Please try again.';
         } else {
-            pageRef = Page.SummitEventsSubmit;
-            errorMessage = 'Multiple payments were received. Please contact event .';
+            errorMessage = 'Multiple payments were received. Please contact event.';
         }
         if (String.isNotBlank(errorMessage)) {
             pageRef = Page.SummitEventsSubmit;
